[package]
name = "conductor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.*", features = ["derive"] }
rmp-serde = "0.15.*"
serde_json = "1.0.0"
log = "0.4.*"
simple_logger = "1.13.*"
rocket = "0.5.0-rc.1"
rocket_sync_db_pools = { version = "0.1.0-rc.1", default-features = false, features = [
    "postgres_pool",
] }
postgres = { version = "0.19.*", features = [
    "with-time-0_2",
    "with-uuid-0_8",
    "with-serde_json-1",
] }
tokio = { version = "1", features = ["full"] }
