[package]
name = "conductor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conductor_shared = { path = "../conductor_shared"}
conductor_derive = { path = "../conductor_derive" }


[features]
default = []
async = ["conductor_shared/async", "conductor_derive/async"]
msgpack = ["conductor_shared/msgpack"]
json = ["conductor_shared/json"]