[package]
name = "conductor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conductor_common = { path = "../conductor_common"}
conductor_derive = { path = "../conductor_derive" }


[features]
default = []
async = ["conductor_common/async", "conductor_derive/async"]
