[package]
name = "conductor_shared"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.0"
chrono = { version = "0.4.*", features = ["serde"] }
url = "2.2.2"
duplicate = "0.3.0"

reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"], optional = true }
async-trait = {version = "0.1.51", optional = true}
rmp-serde = { version = "0.15.*", optional = true }

[features]
default = []
async = ["tokio", "async-trait"]
msgpack = ["rmp-serde"]
json = ["reqwest/json"]